# obsidian-mcp

./: .env.example  .gitignore  README.md  obsidian-cli.py  obsidian-menu.py  pyproject.toml
config/: settings.yaml.example
src/: __init__.py  indexer.py  menu.py  note_parser.py  retriever.py  server.py  server_http.py  wikilink_graph.py
